--- a/Assets/Fugu.asmdef
+++ b/Assets/Fugu.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Fugufish",
     "references": [
-        "GUID:68765d262e2128e4ab49c983f3411946"
+        "GUID:68765d262e2128e4ab49c983f3411946",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
