Added basic camera effects  stuff and fixed all the warnings in the code base

--- a/Assets/Spine/Runtime/spine-unity.asmdef
+++ b/Assets/Spine/Runtime/spine-unity.asmdef
@@ -1,4 +1,13 @@
-﻿{
-	"name": "spine-unity",
-	"references": []
+{
+    "name": "spine-unity",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
