Added text writer and doors and stuff

--- a/Assets/Fugu.asmdef
+++ b/Assets/Fugu.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "GUID:68765d262e2128e4ab49c983f3411946",
         "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
